Parte das correções